objects/Expense__c.object
<CustomObject>
    <description>Includes event, the date of event and the expense of an event</description>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Holds expenses for a particular event</description>
        <label>Amount</label>
        <precision>17</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>Holds event date</description>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Donation__c</fullName>
        <label>Donation</label>
        <summarizedField>Contribution__c.Contribution__c</summarizedField>
        <summaryForeignKey>Contribution__c.Expense__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <description>Holds event name</description>
        <label>Event</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Expense</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Exp-{0000}</displayFormat>
        <label>Expense Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Contribution_Rule</fullName>
        <active>true</active>
        <description>Sum of Contribution amount must be less than equal to the total expense amount</description>
        <errorConditionFormula>Donation__c  &gt;  Amount__c</errorConditionFormula>
        <errorMessage>Sum of Contribution amount must be less than equal to the total expense amount</errorMessage>
    </validationRules>
</CustomObject>